# soup-rendezvous

./: .gitattributes  .gitignore  Cargo.toml  PROOF_OF_CHANNEL.md  PROOF_OF_NODE.md  PROOF_OF_PEER.md  PROOF_OF_UTXO.md  README.md  WALLET_INTEGRATION.md
.github/workflows/: ci.yml
deploy/: install.sh  soup-rendezvous.example.toml  soup-rendezvous.service  soup-rendezvous@.service
src/: config.rs  error.rs  event.rs  events.rs  http.rs  kinds.rs  lib.rs  main.rs
src/db/: mod.rs  schema.sql  sqlite.rs
tests/: integration.rs  unit.rs
