[package]
name = "soup-rendezvous"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Coordination protocol for multi-party Bitcoin signing, built on Nostr."
repository = "https://github.com/8144225309/soup-rendezvous"
publish = false

[dependencies]
nostr = { version = "0.44", features = ["nip44"] }
nostr-sdk = { version = "0.44", features = ["nip44"] }
hex = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
